# jacksonbot

./: .dockerignore  .env  .gitignore  .gitmodules  Abyss.Constants.cs  Abyss.Statistics.cs  Abyss.cs  Abyss.csproj  Abyss.csproj.DotSettings  Abyss.sln  Adora.sln  BotService.cs  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Containerfile  DESIGN_NOTES.md  DOCKER.md  Dockerfile  Jacksonbot.sln  Katbot.csproj  Katbot.sln  LICENSE.md  Lament.Constants.cs  Lament.csproj  Lament.csproj.DotSettings  Lament.sln  LamentServiceHost.cs  NuGet.Config  NuGet.config  Program.cs  README.md  Rosalina.sln  WebStartup.cs  abyss.appsettings.example.json  abyss.example.json  adora.example.json  adora.json  appconfig.example.json  (+14 more)
.github/: FUNDING.yml
Attributes/: AbyssCooldownAttribute.cs  DefaultValueSummaryAttribute.cs  DontAttachFooterAttribute.cs  DontAttachTimestampAttribute.cs  DontEmbedAttribute.cs  DontTrackAttribute.cs  EconomicImpactAttribute.cs  ExampleAttribute.cs  HiddenAttribute.cs  IsRootAttribute.cs  KatbotCooldownAttribute.cs  ParameterArrayOptionalAttribute.cs  SilentCheckAttribute.cs  ThumbnailAttribute.cs
Checks/: CheckUtilities.cs  IAbyssCheck.cs  IKatbotCheck.cs
Common/: AbyssLogger.cs  EmptyDisposable.cs  KatbotLogger.cs  KatbotLoggingProvider.cs
Controllers/: GuildsController.cs  IndexController.cs
Discord/: CooldownAttribute.cs  CooldownBucketKeyGenerators.cs  CooldownType.cs  LamentCommandContext.cs  LamentDiscordBot.cs  RuntimeFlags.cs
Entities/: AbyssCommandContext.cs  AbyssConfig.cs  AbyssModuleBase.cs  AbyssUpdateContext.cs  CooldownType.cs  IServiceInitializable.cs  KatbotCommandContext.cs  KatbotConfig.cs  KatbotModuleBase.cs  KatbotUpdateContext.cs  ScriptStage.cs  (+1 more)
commands_lib/: Cargo.toml
commands_lib/src/: command.rs  execution.rs  lib.rs  macros.rs  make_command.rs  parameter_value.rs  registry.rs
(+937 files in other folders)
