[package]
name = "jacksonbot"
version = "21.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
serde_json = "1.0.94"
serenity = { version = "0.11", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
