[package]
name = "jacksonbot"
version = "21.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.24"
log = "0.4.17"
pretty_env_logger = "0.4.0"
rand = "0.8.5"
serde_json = "1.0.94"
serenity = { version = "0.11", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
lazy_static = "1.4.0"
regex = "1.7.3"
