[package]
name = "commands_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.11", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
lazy_static = "1.4.0"
regex = "1.7.3"
log = "0.4.17"